--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Tabish5858.github.io/Tabish-s-Portfolio",
+  "homepage": "http://Tabish5858.github.io/My_Portfolio_Website",
   "name": "tabish-portfolio",
   "private": true,
   "version": "0.0.0",
